[package]
name = "rustzpassmd"
version = "0.1.0"
edition = "2021"


[dependencies]
base64 = "0.22.1"
err = "0.0.8"
rand = "0.8.5"
#smtp = "0.3.2"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0.127"
#lettre = "0.11.7"
gjson = "0.8"
mail-send = "0.4.9"

[[bin]]
name = "rustzpassmd"
path = "rustzpassmd.rs"
